<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:background="@drawable/shape_detail_info_hotel"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:layout_marginTop="16dp"
        app:iss_auto_cycle="false"
        app:iss_corner_radius="30"
        app:iss_text_align="CENTER" />

    <TextView
        android:id="@+id/nameRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        tools:text="@string/hotel_room_name" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_btn_details_about_room"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="5dp"
            android:text="@string/btn_details_about_room"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/contentdescription"
            android:src="@drawable/arrow_right_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priceRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:text="186 000 Р" />

        <TextView
            android:id="@+id/pricePer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/hotel_start_price_description"
            android:textSize="16sp"
            tools:text="за 7 ночей с перелетом" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelectRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/shape_btn_hotel_room"
        android:text="@string/btn_select_hotel_room"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>